[gd_scene load_steps=5 format=3 uid="uid://wn6yd4wg14gs"]

[ext_resource type="Texture2D" uid="uid://b6dint0i3aoe4" path="res://Assets/robot.png" id="1_2a40w"]
[ext_resource type="Script" path="res://robot.gd" id="1_6ojlm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sy0du"]
size = Vector2(34, 45)

[sub_resource type="CircleShape2D" id="CircleShape2D_p12x5"]
radius = 21.006

[node name="Robot" type="StaticBody2D" groups=["Interactable"]]
script = ExtResource("1_6ojlm")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.212695, 0.212695)
texture = ExtResource("1_2a40w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_sy0du")

[node name="Interactable" type="Area2D" parent="."]
position = Vector2(0, 8.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
shape = SubResource("CircleShape2D_p12x5")

[node name="Dialog0" type="Label" parent="."]
visible = false
offset_left = -100.0
offset_top = -49.0
offset_right = 89.0
offset_bottom = -26.0
theme_override_font_sizes/font_size = 16
text = "The robot has no power."

[node name="Dialog1" type="Label" parent="."]
visible = false
offset_left = -127.0
offset_top = -69.0
offset_right = 130.0
offset_bottom = -20.0
text = "You give the battery to the robot.
The robot powered up!"
horizontal_alignment = 1

[node name="FightButton" type="Button" parent="Dialog1"]
layout_mode = 0
offset_left = 57.0
offset_top = 107.0
offset_right = 121.0
offset_bottom = 130.0
text = "Fight"

[node name="RunButton" type="Button" parent="Dialog1"]
layout_mode = 0
offset_left = 133.0
offset_top = 107.0
offset_right = 197.0
offset_bottom = 138.0
text = "Run"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="Interactable" to="." method="_on_interactable_area_entered"]
[connection signal="area_exited" from="Interactable" to="." method="_on_interactable_area_exited"]
[connection signal="pressed" from="Dialog1/FightButton" to="." method="_on_fight_button_pressed"]
[connection signal="pressed" from="Dialog1/RunButton" to="." method="_on_run_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
